--- a/Wijnderlust/Base.lproj/Main.storyboard
+++ b/Wijnderlust/Base.lproj/Main.storyboard
@@ -25,15 +25,40 @@
                                 <color key="textColor" red="0.18039215689999999" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="J9U-yC-Oj3">
-                                <rect key="frame" x="0.0" y="100" width="375" height="518"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="J9U-yC-Oj3">
+                                <rect key="frame" x="0.0" y="127" width="375" height="491"/>
                             </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g1b-g2-oky">
+                                <rect key="frame" x="327" y="56" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="4Tf-K1-X2J"/>
+                                    <constraint firstAttribute="height" constant="30" id="kKH-zs-kPz"/>
+                                </constraints>
+                                <state key="normal" backgroundImage=" Search"/>
+                                <connections>
+                                    <segue destination="oNR-aL-D4k" kind="presentation" id="4wl-vI-SXf"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Great Places to Drink Wine Near You..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="muV-vH-Fur">
+                                <rect key="frame" x="18" y="101" width="339" height="16"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
+                                <color key="textColor" red="0.68395806349999999" green="0.096892753760000006" blue="0.00096701340960000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="J9U-yC-Oj3" firstAttribute="leading" secondItem="O1u-W8-tvY" secondAttribute="leading" id="Dbg-wi-NLZ"/>
+                            <constraint firstItem="muV-vH-Fur" firstAttribute="top" secondItem="R1b-Cw-HPy" secondAttribute="bottom" constant="9" id="I9g-pr-3Sw"/>
+                            <constraint firstItem="J9U-yC-Oj3" firstAttribute="trailing" secondItem="O1u-W8-tvY" secondAttribute="trailing" id="Jg7-DN-gmL"/>
                             <constraint firstItem="O1u-W8-tvY" firstAttribute="trailing" secondItem="R1b-Cw-HPy" secondAttribute="trailing" constant="184" id="Py3-Ln-iK3"/>
+                            <constraint firstItem="muV-vH-Fur" firstAttribute="leading" secondItem="O1u-W8-tvY" secondAttribute="leading" constant="18" id="RiL-3b-NrW"/>
+                            <constraint firstItem="J9U-yC-Oj3" firstAttribute="bottom" secondItem="O1u-W8-tvY" secondAttribute="bottom" id="U5h-Os-Muq"/>
+                            <constraint firstItem="J9U-yC-Oj3" firstAttribute="top" secondItem="muV-vH-Fur" secondAttribute="bottom" constant="10" id="VvP-bg-yWO"/>
                             <constraint firstItem="R1b-Cw-HPy" firstAttribute="top" secondItem="O1u-W8-tvY" secondAttribute="top" constant="31" id="ecZ-i7-GHm"/>
+                            <constraint firstItem="O1u-W8-tvY" firstAttribute="trailing" secondItem="g1b-g2-oky" secondAttribute="trailing" constant="18" id="hsJ-dZ-bpF"/>
+                            <constraint firstItem="O1u-W8-tvY" firstAttribute="trailing" secondItem="muV-vH-Fur" secondAttribute="trailing" constant="18" id="lIK-KJ-Orp"/>
+                            <constraint firstItem="g1b-g2-oky" firstAttribute="top" secondItem="O1u-W8-tvY" secondAttribute="top" constant="36" id="rDD-Is-3DF"/>
                             <constraint firstItem="R1b-Cw-HPy" firstAttribute="leading" secondItem="O1u-W8-tvY" secondAttribute="leading" constant="18" id="rod-1S-mUB"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="O1u-W8-tvY"/>
@@ -41,6 +66,7 @@
                     <tabBarItem key="tabBarItem" title="Around Me" image="AroundMe" id="cPa-gy-q4n"/>
                     <connections>
                         <outlet property="aroundMeMap" destination="J9U-yC-Oj3" id="zLT-hS-1oK"/>
+                        <outlet property="searchLabel" destination="muV-vH-Fur" id="gsx-G9-Mh6"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
@@ -1319,6 +1345,90 @@
             </objects>
             <point key="canvasLocation" x="736.79999999999995" y="394.45277361319341"/>
         </scene>
+        <!--AroundMeSearchController-->
+        <scene sceneID="Gdy-cR-e7o">
+            <objects>
+                <viewController title="AroundMeSearchController" id="oNR-aL-D4k" userLabel="AroundMeSearchController" customClass="AroundMeSearchController" customModule="Wijnderlust" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="fZZ-eq-30X">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Tm-it-EUY">
+                                <rect key="frame" x="327" y="56" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="Dty-Wo-BYh"/>
+                                    <constraint firstAttribute="height" constant="30" id="IrX-aU-H7u"/>
+                                </constraints>
+                                <state key="normal" backgroundImage=" Cross"/>
+                                <connections>
+                                    <action selector="dismissSearch:" destination="oNR-aL-D4k" eventType="touchUpInside" id="ecL-YJ-Zd0"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Search..." clearsOnBeginEditing="YES" adjustsFontForContentSizeCategory="YES" minimumFontSize="30" translatesAutoresizingMaskIntoConstraints="NO" id="C31-YX-LQ7">
+                                <rect key="frame" x="18" y="50" width="289" height="41"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="w0p-al-Ksr"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
+                                <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
+                                <connections>
+                                    <action selector="searchValueChanged:" destination="oNR-aL-D4k" eventType="editingChanged" id="zjP-yF-Nuv"/>
+                                </connections>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Around Me" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1yY-sn-S7r">
+                                <rect key="frame" x="18" y="30" width="69" height="16"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
+                                <color key="textColor" red="0.68395806349999999" green="0.096892753760000006" blue="0.00096701340960000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" alpha="0.40000000000000002" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bXW-N8-rv8">
+                                <rect key="frame" x="18" y="312" width="339" height="43"/>
+                                <color key="backgroundColor" red="0.68395806349999999" green="0.096892753760000006" blue="0.00096701340960000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="43" id="dqt-8u-sG9"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Search">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <integer key="value" value="3"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <segue destination="VVb-yH-eDl" kind="unwind" unwindAction="unwindToMapWithSegue:" id="gKb-B0-qoR"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="C31-YX-LQ7" firstAttribute="top" secondItem="1yY-sn-S7r" secondAttribute="bottom" constant="4" id="37F-s9-tGD"/>
+                            <constraint firstItem="23J-Nj-aP8" firstAttribute="trailing" secondItem="bXW-N8-rv8" secondAttribute="trailing" constant="18" id="7mR-X2-qjM"/>
+                            <constraint firstItem="0Tm-it-EUY" firstAttribute="leading" secondItem="C31-YX-LQ7" secondAttribute="trailing" constant="20" id="BFc-Ou-xHG"/>
+                            <constraint firstItem="bXW-N8-rv8" firstAttribute="top" secondItem="C31-YX-LQ7" secondAttribute="bottom" constant="221" id="FoD-Mi-YU1"/>
+                            <constraint firstItem="C31-YX-LQ7" firstAttribute="top" secondItem="23J-Nj-aP8" secondAttribute="top" constant="30" id="GCH-cb-VaV"/>
+                            <constraint firstItem="1yY-sn-S7r" firstAttribute="leading" secondItem="23J-Nj-aP8" secondAttribute="leading" constant="18" id="GfG-Mf-KZL"/>
+                            <constraint firstItem="C31-YX-LQ7" firstAttribute="leading" secondItem="23J-Nj-aP8" secondAttribute="leading" constant="18" id="QCu-Fq-gdD"/>
+                            <constraint firstItem="23J-Nj-aP8" firstAttribute="trailing" secondItem="0Tm-it-EUY" secondAttribute="trailing" constant="18" id="WWq-RS-hDL"/>
+                            <constraint firstItem="0Tm-it-EUY" firstAttribute="top" secondItem="23J-Nj-aP8" secondAttribute="top" constant="36" id="aJd-b1-CnL"/>
+                            <constraint firstItem="1yY-sn-S7r" firstAttribute="top" secondItem="23J-Nj-aP8" secondAttribute="top" constant="10" id="i2S-4o-gOf"/>
+                            <constraint firstItem="bXW-N8-rv8" firstAttribute="leading" secondItem="23J-Nj-aP8" secondAttribute="leading" constant="18" id="nCl-Te-5KZ"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="23J-Nj-aP8"/>
+                    </view>
+                    <connections>
+                        <outlet property="dismissSearchButton" destination="0Tm-it-EUY" id="jyh-dk-Zee"/>
+                        <outlet property="searchButton" destination="bXW-N8-rv8" id="weV-Mo-GU4"/>
+                        <outlet property="searchField" destination="C31-YX-LQ7" id="Wun-dx-CtG"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rOa-05-Ngz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="VVb-yH-eDl" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="1517.5999999999999" y="393.55322338830587"/>
+        </scene>
         <!--Venue Interior Table Controller-->
         <scene sceneID="bKv-aQ-ZJx">
             <objects>
@@ -1578,10 +1688,12 @@
         </scene>
     </scenes>
     <resources>
+        <image name=" Cross" width="46" height="46"/>
         <image name=" Dinner Not Filled" width="60" height="60"/>
         <image name=" Hotel Not Filled" width="60" height="60"/>
         <image name=" Log Out" width="50" height="50"/>
         <image name=" Reviews" width="50" height="50"/>
+        <image name=" Search" width="54" height="54"/>
         <image name=" Settings" width="50" height="50"/>
         <image name=" Trip History" width="50" height="50"/>
         <image name=" Wine Not Filled" width="60" height="60"/>
@@ -1595,7 +1707,7 @@
         <image name="placeholder" width="787" height="512"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="1fO-Tv-BKH"/>
-        <segue reference="q7w-Nt-Xvl"/>
+        <segue reference="4Em-ky-nK9"/>
+        <segue reference="dPf-fs-d6J"/>
     </inferredMetricsTieBreakers>
 </document>
